tests/NormalTests/paczka1/small_fuzzy/49463381.err
Error in line 1: S4 S4 78,9
Error in line 5: S4 S4 256,4
Error in line 6: NhoZ S423 14,1
Error in line 14: S4 S975 74,5
Error in line 16: S4 S975 62,6
